--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,6 +1,7 @@
 <%- layout('layouts/boilerplate') %>
-<h1>This is Home Page</h1>
-
-<% for(let i =0;i<20;i++){ %>
-    <h3>line number <%= i %></h3>
-<% } %>
+    <div>
+        <h1>This is Home Page</h1>
+        <form action="">
+            <button>Get Appointment</button>
+        </form>
+    </div>
