--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,4 +1,17 @@
 <!-- includes/navbar.ejs -->
 <nav>
-    <h1>My Website</h1>
+    <header class="navbar">
+        <div class="logo">
+            <img src="" alt="MindEase Logo">
+            <h2>Mind Ease</h2>
+        </div>
+        <div>
+            <ul class="nav-links">
+                <li><a href="#booking" class="btn">Booking</a></li>
+                <li><a href="#community" class="btn">Community</a></li>
+                <li><a href="#games" class="btn">Games & Activities</a></li>
+                <li><a href="http://localhost:8080/user/68ca78059bbd022ba80061eb" class="btn login">LOGIN</a></li>
+            </ul>
+        </div>
+    </header>
 </nav>
