--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -7,10 +7,11 @@
         </div>
         <div>
             <ul class="nav-links">
-                <li><a href="#booking" class="btn">Booking</a></li>
+                <li><a href="http://localhost:8080" class="btn">Home</a></li>
+                <li><a href="http://localhost:8080/booking" class="btn">Booking</a></li>
                 <li><a href="#community" class="btn">Community</a></li>
                 <li><a href="#games" class="btn">Games & Activities</a></li>
-                <li><a href="http://localhost:8080/user/68ca78059bbd022ba80061eb" class="btn login">LOGIN</a></li>
+                <li><a href="http://localhost:8080/user/68ca78059bbd022ba80061eb" class="btn login">Profile</a></li>
             </ul>
         </div>
     </header>
