--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -2,14 +2,13 @@
 <nav>
     <header class="navbar">
         <div class="logo">
-            <img src="" alt="MindEase Logo">
-            <h2>Mind Ease</h2>
+            <img src="/Utils/logo.png" alt="MindEase Logo">
         </div>
         <div>
             <ul class="nav-links">
                 <li><a href="http://localhost:8080" class="btn">Home</a></li>
                 <li><a href="http://localhost:8080/booking" class="btn">Booking</a></li>
-                <li><a href="#community" class="btn">Community</a></li>
+                <li><a href="http://localhost:8080/comm" class="btn">Community</a></li>
                 <li><a href="#games" class="btn">Games & Activities</a></li>
                 <li><a href="http://localhost:8080/user/68ca78059bbd022ba80061eb" class="btn login">Profile</a></li>
             </ul>
