--- a/views/pages/bookList.ejs
+++ b/views/pages/bookList.ejs
@@ -16,8 +16,10 @@
                     <h3>₹<%= psy.price %> per hour</h3>
                 </div>
                 <div class="btns">
-                    <button>View Profile</button>
-                    <button>Book</button>
+                    <a href="http://localhost:8080/booking/<%= psy._id %>">
+                        <button>View Profile</button>
+                        <button>Book</button>
+                    </a>
                 </div>
             </div>
 
