--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -6,7 +6,7 @@
                 <!-- Left: Logo + Subscribe -->
                 <div class="footer-left">
                     <div class="footer-logo">
-                        <img src="https://via.placeholder.com/40?text=🧠" alt="Mind Ease Logo">
+                        <img src="/Utils/logo.png" style="width: 100px;" alt="Mind Ease Logo">
                         <span>Mind Ease</span>
                     </div>
                     <div class="subscribe-box">
@@ -19,11 +19,11 @@
                 <!-- Center: Social + Copyright -->
                 <div class="footer-center">
                     <div class="social-icons">
-                        <a href="#"><img src="https://via.placeholder.com/25?text=📸" alt="Instagram"></a>
-                        <a href="#"><img src="https://via.placeholder.com/25?text=🐦" alt="Twitter"></a>
-                        <a href="#"><img src="https://via.placeholder.com/25?text=📞" alt="Phone"></a>
-                        <a href="#"><img src="https://via.placeholder.com/25?text=✉" alt="Email"></a>
-                        <a href="#"><img src="https://via.placeholder.com/25?text=📍" alt="Location"></a>
+                        <a href="#"><img src="/Utils/insta.png" style="width: 35px; height: 35px;" alt="Instagram"></a>
+                        <a href="#"><img src="/Utils/twt.png" style="width: 35px; height: 35px;" alt="Twitter"></a>
+                        <a href="#"><img src="/Utils/phone.png" style="width: 35px; height: 35px;" alt="Phone"></a>
+                        <a href="#"><img src="/Utils/mail.png" style="width: 35px; height: 35px;" alt="Email"></a>
+                        <a href="#"><img src="/Utils/loc.png" style="width: 35px; height: 35px;" alt="Location"></a>
                     </div>
                     <p>Copyright @ 2020 MCStartup</p>
                     <p>All rights reserved Developed by S Dutta</p>
