--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,6 +1,20 @@
 <!-- includes/navbar.ejs -->
 <nav>
-    <header class="navbar">
+    <div class="main-container">
+        <div class="logo"><img src="/Utils/logo.png" style="width: 90px;" alt=""></div>
+
+        <div class="menu">
+            <a href="http://localhost:8080">Home</a>
+            <a href="http://localhost:8080/booking">Booking</a>
+            <a href="http://localhost:8080/ganda">Games & Activities</a>
+            <a href="http://localhost:8080/comm">Community</a>
+        </div>
+
+        <div class="icons">
+            <a href="http://localhost:8080/user/68ca78059bbd022ba80061eb"><span>👤</span></a>
+        </div>
+    </div>
+    <!-- <header class="navbar">
         <div class="logo">
             <img src="/Utils/logo.png" alt="MindEase Logo">
         </div>
@@ -9,9 +23,9 @@
                 <li><a href="http://localhost:8080" class="btn">Home</a></li>
                 <li><a href="http://localhost:8080/booking" class="btn">Booking</a></li>
                 <li><a href="http://localhost:8080/comm" class="btn">Community</a></li>
-                <li><a href="#games" class="btn">Games & Activities</a></li>
+                <li><a href="http://localhost:8080/ganda" class="btn">Games & Activities</a></li>
                 <li><a href="http://localhost:8080/user/68ca78059bbd022ba80061eb" class="btn login">Profile</a></li>
             </ul>
         </div>
-    </header>
+    </header> -->
 </nav>
