--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -7,11 +7,7 @@
         <% if (user && (user.profilePic || user.photo)) { %>
           <img src="<%= user.profilePic || user.photo %>" alt="<%= user.name || 'User' %> avatar">
         <% } else { %>
-          <svg width="80" height="80" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <rect width="24" height="24" rx="4" fill="#eaf3eb" />
-            <path d="M12 12a3 3 0 100-6 3 3 0 000 6z" fill="#9bbca8"/>
-            <path d="M4 20a7.5 7.5 0 0116 0H4z" fill="#cfe2d0"/>
-          </svg>
+          <img src="/Utils/profilePic.png" style="width: 130px;" alt="">
         <% } %>
       </div>
       <div class="name"><%= user && user.name ? user.name : 'Unnamed User' %></div>
